<resources>
    <string name="app_name">Madcow 5x5</string>
    <string name="lift_height">150dp</string>
    <string name="complete_workout">Complete Workout</string>
    <string name="lift_squat">Squat</string>
    <string name="lift_bench">Bench Press</string>
    <string name="lift_row">Barbell Row</string>
    <string name="lift_press">Overhead Press</string>
    <string name="lift_deadlift">Deadlift</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="smallest_plate">Smallest Plate</string>
    <string name="match_pr_week">Match PRs in Week #</string>
    <string name="accessory">Accessory Work</string>
    <string name="confirm">Confirm</string>
    <string name="day_one">Day 1 Workout</string>
    <string name="day_one_workout">Barbell Squats, Bench Press and Barbell Rows</string>
    <string name="day_two">Day 2 Workout</string>
    <string name="day_two_workout">Barbell Squats, Overhead Press and Deadlift</string>
    <string name="day_three">Day 3 Workout</string>
    <string name="day_three_workout">Barbell Squats, Bench Press and Barbell Rows</string>
    <string name="faq">Frequently Asked Questions (FAQS)</string>
    <string name="whats_madcow">What is Madcow 5x5?</string>
    <string name="madcow_is">Madcow is a 5x5 training program aimed at intermediate lifters who
                            has utilised the capability of their beginner strength on a beginner program
                            such as StrongLift 5x5</string>
    <string name="why_squat">Do I need to squat 3 times a week?</string>
    <string name="ans_squat">Wednesday is a light squat day where you will be squatting less weight
                            than on Monday or Friday. The light day provides you with extra physical
                            and mental recovery for Friday's workout</string>
    <string name="what_days">What days should I workout on?</string>
    <string name="ans_days">It is best to have 24 hours rest between each of the three workouts.
                            After the third workout, it would be ideal to give your body 48 hours
                            to recover completely. An example of the days you can run the program on
                            is: Monday-Wednesday-Friday or Tuesday-Thursday-Saturday</string>
    <string name="what_one">How is the first workout calculated?</string>
    <string name="ans_one">In this workout, you’re “ramping” up to a single top set of 5 on the barbell
                            squat, bench press, and barbell row. After a few weeks on the program, the top
                            set is intended to be a PR set. Using 12.5% jumps between sets,
                            you’re going to end up doing 5×5.</string>
    <string name="what_two">How is the second workout calculated?</string>
    <string name="ans_two">In this workout, you do four “ramping” sets on the barbell squat and overhead press.
                            This workout is a bit of a “lighter” day because you only do two sets of 5 at 75%
                            rather than fully ramping up to a 100% set of 5. However, this session isn’t
                            that “light” because you’re also doing a 4×5 ramped deadlift workout!
                            And that deadlift workout culminates in a 100% heavy set of 5 which is
                            intended to be a PR after the first few weeks of the program.</string>
    <string name="what_three">How is the third workout calculated?</string>
    <string name="ans_three">This workout is crucial to understanding the innerworkings of Madcow’s.
                            You’re going to do almost the exact same workout as Monday except every
                            single set is going to be 2.5% heavier. Instead of a top set of 5,
                            you’re only going to do a top set of three. This top set triple is going
                            to feel “easier” than Monday, but Friday is actually more work because after
                            you hit that triple you have to do a back-off set of 8 at 77.5% of Monday’s top set.
                            Friday is the day on Madcow’s that primarily drives progress on Mondays.</string>
    <string name="what_acc">Do I need to the accessory work?</string>
    <string name="ans_acc">You do not need to carry out the accessory work however, it is highly recommended.
                            The accessory work included is targeted to benefit the program with
                            goals to increase your strength and build muscle.</string>
    <string name="own_acc">Can I choose my own accessory work></string>
    <string name="ans_own">Of course! The accessory work is completely flexible to your own liking.
                            Be careful not to do too much accessory work that can cause fatigue and
                            affect your next workout session.</string>

    <string name="ob_header1">WELCOME TO MADCOW 5X5</string>
    <string name="ob_header2">BUILD MUSCLE AND STRENGTH</string>
    <string name="ob_header3">ENTER YOUR MAX LIFTS TO START</string>
    <string name="ob_get_started">GET STARTED</string>
    <string name="ob_desc1">Madcow 5x5 is a 3 day intermediate powerlifting program</string>
    <string name="ob_desc2">Work on the main compound movements, Bench Press, Overhead Press, Barbell
                            Squats, Deadlift and Barbell Rows to build muscle and strength</string>
    <string name="ob_desc3">Remember starting too light is better than too heavy - let it be easy
                            the first weeks in order to focus on technique and speed, and only aim
                            to break PRs starting week 4</string>
</resources>
