<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bignerdranch.android.dumbbell.Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/applogo2" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:onClick="nextWorkout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/day_one"
                    android:textColor="@color/primary_dark"
                    android:textSize="@dimen/text_header"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/day_one_workout"
                    android:textColor="@color/primary_dark"
                    android:textSize="14sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:onClick="day2Workout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/day_two"
                    android:textColor="@color/primary_dark"
                    android:textSize="@dimen/text_header"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/day_two_workout"
                    android:textColor="@color/primary_dark"
                    android:textSize="14sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:onClick="day3Workout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/day_three"
                    android:textColor="@color/primary_dark"
                    android:textSize="@dimen/text_header"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/day_three_workout"
                    android:textColor="@color/primary_dark"
                    android:textSize="14sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="bottom"
                android:onClick="completeWorkout"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/primary_dark"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:text="Complete Workout" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
